<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >
    
   <Button
        android:id="@+id/button8"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/return_about"
       android:layout_marginLeft="250dp"/> 

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_game"
        android:textColor="#FFF"
        android:textSize="20sp" />
 
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/about_main"
        android:textColor="#FFF"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="200dp"
        android:text="@string/author"
        android:textColor="#FFF"
        android:textSize="15sp" />

</LinearLayout>
