<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#ff2f4f4f">   
  <include  
        android:id="@+id/logo1"  
        layout="@layout/logo" />   
   <TableLayout android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">  
        <TextView />
        <TextView android:text="用户名:"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24px"/>
        <EditText android:id="@+id/editText1"
            android:textSize="24px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200px"/>
    </TableLayout>
    <TableLayout android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView android:text="密码："
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24px"/>
        <EditText android:id="@+id/editText2"
            android:textSize="24px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200px"/>
    </TableLayout> 
    
    <TextView  
        android:id="@+id/sound_help"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:layout_marginTop="15dip"  
        android:layout_marginLeft="15dip"  
        android:text="@string/forget_pwd"  
        android:textColor="#29981A" /> 
    
    <LinearLayout 
    android:orientation="vertical" 
    android:layout_width="match_parent"  
    android:layout_height="wrap_content"    
    >
     <Button
        android:id="@+id/button5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/login_label" />     
      <Button
        android:id="@+id/button6"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/setname_label" />      
       <Button
        android:id="@+id/button7"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/quit_label" /> 
</LinearLayout>   
</TableLayout>
